--- a/Styles/stylesyt.css
+++ b/Styles/stylesyt.css
@@ -4,6 +4,10 @@
     margin-bottom: 0px;
 }
 
+.linkss{
+    text-decoration: none;
+}
+
 .thumb1{
     width: 100%;
     border-radius: 20px;
@@ -61,6 +65,7 @@
     margin-bottom: 0px;
     font-size: 12px;
     color: rgb(96, 96, 96);
+    text-decoration: none;
 }
 
 .views{
